force-app/main/default/objects/LWR_Demo_Lead__c/LWR_Demo_Lead__c.object-meta.xml
<CustomObject>
    <description
    >We would normally use the standard Lead object for this, but we have chosen to avoid causing you installation headaches by using a custom object.</description>
    <label>Demo Lead</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Demo Lead number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>