force-app/main/default/objects/LWR_Demo_Lead__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <defaultValue>&quot;Address&quot;</defaultValue>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>