force-app/main/default/objects/LWR_Demo_Lead__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>&quot;Email&quot;</defaultValue>
    <label>Email</label>
    <type>Email</type>
</CustomField>