force-app/main/default/objects/LWR_Demo_Lead__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <defaultValue>&quot;First Name&quot;</defaultValue>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>