force-app/main/default/objects/LWR_Demo_Lead__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <defaultValue>&quot;Last Name&quot;</defaultValue>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>