force-app/main/default/objects/LWR_Demo_Lead__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>