force-app/main/default/objects/LWR_Demo_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Address__c</columns>
    <columns>Email__c</columns>
    <columns>Quote_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>